@@ -1,3 +1,8 @@
+2010-01-21 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* indCIMXMLHandler.c, indCIMXMLExport.c
+	[ 2935931 ] Indications to file:// urls never fail.
+
 2010-01-18  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* providerRegister.h, providerRegister.c, providerMgr.c:
